added imports for java.lang.all  and java.util interfaces